Add configure spring security and cors